--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=Ch-Constructora
+server.port = 80
+#Define el formato de fecha y hora en el logging
+logging.pattern.dateformat=hh:mm
+#Elimina banner Spring
+spring.main.banner-mode=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+#En desarrollo el cache del servidor debe estar en false en produccion en true
+spring.thymeleaf.cache=false
+
+
+#MySql conexion
+spring.datasource.url=jdbc:mysql://localhost:3306/ch_constructoraDB?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=administrator
+spring.datasource.password=admin1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#mostrar información en el log
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
